syntax = "proto3";
package net.proto;

option java_multiple_files = true;
option java_generate_equals_and_hash = true;
option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "ConnectRequestProto";

message ConnectRequest {
    string requester_id = 1;
    string party_name = 2;
}
