syntax = "proto3";
package net.proto;

option java_package = "com.musicocracy.fpgk.net.proto";
option java_outer_classname = "MessageTypeProto";

enum MessageType {
    UNKNOWN = 0;
    PLAY_REQUEST = 1;
}
